Update multiple WoW Classic addons with latest changes and patches
- AutoPotion: Update TOC and changelog
- DBM suite: Update party modules across all expansions
- Details: Major update with core changes and localization updates
- EasyFrames: Remove Cata support, update Mists version
- Leatrix_Maps: Update both classic and vanilla versions
- ReforgeLite: Update core functionality and remove deprecated files

--- a/Leatrix_Maps/CHANGELOG.txt
+++ b/Leatrix_Maps/CHANGELOG.txt
@@ -1,4 +1,7 @@
-﻿5.0.02 - 14th July 2025
+﻿5.0.03 - 5th August 2025
+- Fixed the location of Explorers' League Digsite flight point icon.
+
+5.0.02 - 14th July 2025
 - Fixed the Southern Barrens map.
 
 5.0.01 - 7th July 2025
