--- a/Leatrix_Maps/CHANGELOG.txt
+++ b/Leatrix_Maps/CHANGELOG.txt
@@ -1,4 +1,10 @@
-﻿5.0.03 - 5th August 2025
+﻿5.0.09 - 17th September 2025
+- Added a new option called 'Use English language'.  If enabled, text used throughout the addon will be shown in English regardless of your game locale.
+
+5.0.08 - 10th September 2025
+- PTR (5.5.1) Updated for Mists of Pandaria game patch 5.5.1.
+
+5.0.03 - 5th August 2025
 - Fixed the location of Explorers' League Digsite flight point icon.
 
 5.0.02 - 14th July 2025
